@@ -337,3 +337,4 @@ Entity中toVo区别是否忽略大小写
 17、增加Holder接口
 18、抽象BeanUtil.copyProperties，支持更多选项
 19、DruidDS增加系统关闭的钩子
+20、增加CollectionUtil中isEmpty和isNotEmpty for Iterator and Iterable
